# PracticeTool

./: .gitignore  README.md
.codex/skills/backend-api/: SKILL.md
.codex/skills/backend-api/agents/: openai.yaml
.codex/skills/web/: SKILL.md
.codex/skills/web/agents/: openai.yaml
english-practice-web/: README.md  phrasal_verbs.json  pyproject.toml
english-practice-web/data/: notes.db
english-practice-web/src/english_practice_web/: __init__.py  auth.py  config.py  data.py  memory.py  models.py  ollama.py  server.py
english-practice-web/src/english_practice_web/api/v1/: __init__.py  admin.py  auth.py  check.py  marks.py  notes.py  phrases.py  plans.py  reading.py  review.py  settings.py
english-practice-web/src/english_practice_web/store/: __init__.py  base.py  notes.py  plans.py  recite_marks.py
english-practice-web/src/english_practice_web/ui/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1779589855833-d0e5918c989ce.mjs
english-practice-web/src/english_practice_web/ui/src/: App.vue
english-practice-web/src/english_practice_web/ui/src/api/: index.js
english-practice-web/src/english_practice_web/ui/src/components/: NotesModal.vue  NotesPanel.vue  Sidebar.vue
english-practice-web/src/english_practice_web/ui/src/router/: index.js
english-practice-web/src/english_practice_web/ui/src/stores/: app.js
english-practice-web/src/english_practice_web/ui/src/views/: PracticeView.vue  ReciteView.vue  SettingsView.vue
english-practice-web/src/english_practice_web/ui_v2/: app.js  index.html  style.css
